# vb6-parser

./: CMakeLists.txt  CMakePresets.json  README.md
data/: long_source.bas  prova_form.frm  prova_module.bas  prova_project.vbp  test.bas
docs/: ast_vs_grammar_table.txt  notes_Spirit.md  notes_vb6.md  vb6_attributes.md
msvc/: vb6_parser.sln  vb6_parser.vcxproj  vb6_parser.vcxproj.filters  vb6_parser_lib.vcxproj  vb6_parser_lib.vcxproj.filters  vb6_parser_test.vcxproj  vb6_parser_test.vcxproj.filters
src/: color_console.cpp  color_console.hpp  cpp_ast_printer.cpp  cpp_ast_printer.hpp  raw_ast_printer.cpp  raw_ast_printer.hpp  test_grammar_helper.hpp  test_grammar_helper_gtest.hpp  test_grammar_helper_ut.hpp  vb6_ast.hpp  vb6_ast_adapt.hpp  vb6_ast_printer.cpp  vb6_ast_printer.hpp  vb6_config.hpp  vb6_error_handler.hpp  vb6_parser.cpp  vb6_parser.hpp  vb6_parser.ut.cpp  vb6_parser_def.hpp  vb6_parser_functions.cpp  vb6_parser_helper.cpp  vb6_parser_keywords.hpp  vb6_parser_main.cpp  vb6_parser_operators.hpp  vb6_parser_statements.cpp  vb6_parser_statements_def.hpp  vb6_parser_statements_test.cpp  vb6_parser_test.cpp  vb6_parser_test_main.cpp  vb6_test1.cpp  vb6_test2.cpp  visual_basic_x3.hpp
test/: CMakeLists.txt  test_gosub.cpp  test_grammar_helper_ut.hpp  vb6_parser.doctest.cpp  vb6_parser.gtest.cpp  vb6_parser.ut.cpp  vb6_parser_statements.gtest.cpp  vb6_parser_test_main.cpp
